--- a/tensorboard_rl/BUILD
+++ b/tensorboard_rl/BUILD
@@ -5,13 +5,13 @@ load("@org_tensorflow_tensorboard//tensorboard/defs:zipper.bzl", "tensorboard_zi
 licenses(["notice"])  # Apache 2.0
 
 py_binary(
-    name = "greeter_tensorboard",
+    name = "tensorboard_rl",
     srcs = ["main.py"],
     data = ["assets.zip"],
     main = "main.py",
     srcs_version = "PY2AND3",
     deps = [
-        "//greeter_plugin",
+        "//arrays_plugin",
         "@org_pocoo_werkzeug",
         "@org_tensorflow_tensorboard//tensorboard:default",
         "@org_tensorflow_tensorboard//tensorboard:program",
@@ -23,7 +23,7 @@ tf_web_library(
     srcs = ["index.html"],
     path = "/",
     deps = [
-        "//greeter_plugin:greeter_dashboard",
+        "//arrays_plugin:arrays_dashboard",
         "@org_tensorflow_tensorboard//tensorboard/components/tf_imports:webcomponentsjs",
         "@org_tensorflow_tensorboard//tensorboard/components/tf_tensorboard",
         "@org_tensorflow_tensorboard//tensorboard/components/tf_tensorboard:default_plugins",
